# car-controls-website

./: .firebaserc  .gitignore  firebase.json  init-vpn.tsx  next.config.js  package-lock.json  package.json
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  nextjs.yml
MQTT/: publisher.c  subscriber  subscriber.c
MQTT/publisher/: CMakeLists.txt  publisher.c
flask_server/: server.py
functions/: main.py  requirements.txt
heartbeat_cpp/: main.c  output
src/app/: layout.tsx  page.tsx
src/app/control/: controlPage.css  page.tsx
